--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@fortawesome/react-fontawesome": "^0.1.16",
     "@mui/icons-material": "^5.2.0",
     "@mui/material": "^5.2.2",
+    "date-fns": "^2.27.0",
     "firebase": "^9.6.0",
     "next": "latest",
     "react": "^17.0.2",
+    "react-date-range": "^1.4.0",
     "react-dom": "^17.0.2",
     "sass": "^1.44.0",
     "swiper": "^7.3.1"
