--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^5.2.2",
     "date-fns": "^2.27.0",
     "firebase": "^9.6.0",
+    "mongoose": "^6.1.0",
     "next": "latest",
     "react": "^17.0.2",
     "react-date-range": "^1.4.0",
