--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "@fortawesome/react-fontawesome": "^0.1.16",
     "@mui/icons-material": "^5.2.0",
     "@mui/material": "^5.2.2",
+    "aos": "^2.3.4",
     "date-fns": "^2.27.0",
     "firebase": "^9.6.0",
-    "mongoose": "^6.1.0",
+    "mongoose": "^6.1.1",
     "next": "latest",
     "react": "^17.0.2",
     "react-date-range": "^1.4.0",
