--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
     "@mui/icons-material": "^5.2.0",
+    "@mui/lab": "^5.0.0-alpha.59",
     "@mui/material": "^5.2.2",
     "aos": "^2.3.4",
     "date-fns": "^2.27.0",
     "firebase": "^9.6.0",
+    "moment": "^2.29.1",
     "mongoose": "^6.1.1",
     "next": "latest",
     "react": "^17.0.2",
