--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "^17.0.2",
     "react-date-range": "^1.4.0",
     "react-dom": "^17.0.2",
+    "react-firebase-hooks": "^4.0.1",
     "react-icons": "^4.3.1",
     "sass": "^1.44.0",
     "swiper": "^7.3.1"
