--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "firebase": "^9.6.0",
     "moment": "^2.29.1",
     "mongoose": "^6.1.1",
-    "next": "latest",
+    "next": "^12.0.7",
     "react": "^17.0.2",
     "react-date-range": "^1.4.0",
     "react-dom": "^17.0.2",
