--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^17.0.2",
     "react-firebase-hooks": "^4.0.1",
     "react-icons": "^4.3.1",
+    "react-transition-group": "^4.4.2",
     "sass": "^1.44.0",
     "swiper": "^7.3.1"
   },
