--- a/package.json
+++ b/package.json
@@ -16,17 +16,20 @@
     "@mui/material": "^5.2.2",
     "animate.css": "^4.1.1",
     "aos": "^2.3.4",
+    "confetti-js": "^0.0.18",
     "date-fns": "^2.27.0",
     "firebase": "^9.6.0",
     "moment": "^2.29.1",
     "mongoose": "^6.1.1",
     "next": "^12.0.7",
     "react": "^17.0.2",
+    "react-confetti": "^6.0.1",
     "react-date-range": "^1.4.0",
     "react-dom": "^17.0.2",
     "react-firebase-hooks": "^4.0.1",
     "react-icons": "^4.3.1",
     "react-transition-group": "^4.4.2",
+    "react-use": "^17.3.1",
     "sass": "^1.44.0",
     "swiper": "^7.3.1"
   },
