--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react-transition-group": "^4.4.2",
     "react-use": "^17.3.1",
     "sass": "^1.44.0",
-    "swiper": "^7.3.1"
+    "swiper": "^7.3.1",
+    "swr": "^1.1.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.6",
