--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
     "@emotion/react": "^11.7.0",
@@ -36,6 +37,9 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.2.6",
+    "eslint": "8.5.0",
+    "eslint-config-next": "12.0.7",
+    "eslint-config-prettier": "^8.3.0",
     "postcss": "^8.3.5",
     "tailwindcss": "^2.2.4"
   }
