--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "moment": "^2.29.1",
     "mongoose": "^6.1.1",
     "next": "^12.0.7",
+    "nodemailer": "^6.7.2",
     "react": "^17.0.2",
     "react-confetti": "^6.0.1",
     "react-date-range": "^1.4.0",
