--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react-use": "^17.3.1",
     "sass": "^1.44.0",
     "swiper": "^7.3.1",
-    "swr": "^1.1.2"
+    "swr": "^1.1.2",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.6",
