--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,10 @@
 {
+  
+  "plugins": ["unused-imports"],
   "rules": {
-    "no-console": 1
+    "no-console": 1,
+    "no-unused-vars": "off",
+    "unused-imports/no-unused-imports": "warn"
   },
   "extends": ["next/core-web-vitals", "prettier"]
 }
