--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "eslint": "8.5.0",
     "eslint-config-next": "12.0.7",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-unused-imports": "^2.0.0",
     "postcss": "^8.3.5",
     "tailwindcss": "^2.2.4"
   }
