--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "sass": "^1.44.0",
     "swiper": "^7.3.1",
     "swr": "^1.1.2",
+    "timeago.js": "^4.0.2",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
