--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/material": "^5.2.2",
     "animate.css": "^4.1.1",
     "aos": "^2.3.4",
+    "cloudinary-react": "^1.7.0",
     "confetti-js": "^0.0.18",
     "date-fns": "^2.27.0",
     "firebase": "^9.6.0",
